--- a/work.html
+++ b/work.html
@@ -29,32 +29,33 @@
     <title>My work</title>
   </head>
   <body>
-    <div class="container">
-      <nav class="d-flex justify-content-between">
-        <a href="index.html" title="Homepage">Thandokazi</a>
-          
-          <!--img
-            src="images/logo-small.png"
-            class="logo d-block d-md-none"
-            alt="Logo"
-      -->
-        </a>
-        <ul>
-          <li>
-            <a href="index.html" title="Homepage">Home</a>
-          </li>
-          <li>
-            <a href="about.html" title="About Thandokazi">About</a>
-          </li>
-          <li class="active">
-            <a href="work.html" title="My work">Work</a>
-          </li>
-          <li>
-            <a href="contact.html" title="Contact Thandokazi">Contact</a>
-          </li>
-        </ul>
-      </nav>
-    </div>
+    <nav class="navbar">
+        <div class="navbar-logo">
+            <a href="index.html">Thandokazi</a>
+        </div>
+        <div class="navbar-links" id="navbar-links">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="work.html">Work</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </div>
+       <div class="nav-toggle" id="nav-toggle">
+            <i class="fas fa-bars"></i>
+        </div>
+    </nav>
+
+    <script>
+        const navToggle = document.getElementById('nav-toggle');
+        const navbarLinks = document.getElementById('navbar-links');
+
+        navToggle.addEventListener('click', () => {
+            navbarLinks.classList.toggle('active');
+        });
+    </script>
+
+    
     <div class="content-container container">
       <div class="content">
         <h1 class="mb-5">I had a pleasure of working with these awesome projects!</h1>
@@ -107,7 +108,7 @@
         <div class="row mb-5">
           <div class="col">
             <div class="cot zoom">
-            <a href="https://github.com/marquesarendse/Banking-app3" target="_blank">
+            <a href="https://github.com/lisatshona/Banking-App" target="_blank">
               <img src="images/bnk.png" class="img-fluid" alt="Tourism website preview">
               <div class="overlay">
                 <b>Banking Application </b><br>
