updated the work section and css

--- a/about.html
+++ b/about.html
@@ -88,26 +88,11 @@
       </div>
     </div>
     <footer>
-      <div
-        class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex"
-      >
-        <div>
-          <h3>Work inquiry</h3>
-          <p class="text-muted">Let's work together</p>
-        </div>
-        <div>
-          <a
-            href="contact.html"
-            class="btn btn-branding mt-3"
-            title="Contact Thandokazi"
-            >Contact me</a
-          >
-        </div>
-      </div>
+    
      
       <div class="social-links text-center">
         <a
-        href="https://www.github.com/thandokazi2000
+        href="https://github.com/thandokazinotyalwa
         "
         target="_blank"
         title="GitHub Profile"
