--- a/contact.html
+++ b/contact.html
@@ -116,7 +116,7 @@
       
       <div class="social-links text-center">
         <a
-          href="https://www.github.com/thandokazi2000
+          href="https://github.com/thandokazinotyalwa
           "
           target="_blank"
           title="GitHub Profile"
