--- a/work.html
+++ b/work.html
@@ -60,158 +60,95 @@
       <div class="content">
         <h1 class="mb-5">I had a pleasure of working with these awesome projects!</h1>
 
-        <div class="row mb-5">
-          <div class="col">
-            <div class="cot zoom">
-            <a href="https://664b08f656a6517aff08fac7--joyful-trifle-cbba68.netlify.app/" target="_blank">
-              <img src="images/citybiulder.png" class="img-fluid" alt="Tourism website preview">
-              <div class="overlay">
-                <b>Collaboration Website </b><br>
-              </div>
-           </a> 
-           </div>
-          </div>
-          <div class="col d-none d-lg-block">
-            <div class="project-description">
-              <h2 class="mb-5">Website Project</h2>
-              <p class="mb-4 text-muted ">
-                City Builder Collaboration website,Crafted by a dedicated team using HTML, CSS, and JavaScript, 
-                our website is a testament to our shared vision and collective effort.
-                With seamless navigation, responsive design, 
-                and interactive elements.
-              </p>
-              <a href="work.html" class="btn btn-branding-outline">Learn more</a>
-            </div>
+        <div class="container">
+ <div class="container">
+  <div class="row mb-5">
+    <div class="col-md-4">
+      <a href="https://664b08f656a6517aff08fac7--joyful-trifle-cbba68.netlify.app/" target="_blank" class="card-link">
+        <div class="card h-100">
+          <img src="images/citybiulder.png" class="card-img-top" alt="City Builder">
+          <div class="card-body">
+            <h5 class="card-title">Collaboration Website</h5>
+            <p class="card-text">Crafted by a dedicated team using HTML, CSS, and JavaScript, our website is a testament to our shared vision and collective effort.</p>
           </div>
         </div>
-        <div class="row mb-5">
-          <div class="col d-none d-lg-block">
-            <div class="project-description">
-              <h2 class="mb-5">Website Project</h2>
-              <p class="mb-4 text-muted ">
-                Weather Application,Crafted by me using JavaScript and React.
-              </p>
-              <a href="work.html" class="btn btn-branding-outline">Learn more</a>
-            </div>
-          </div>
-          <div class="col">
-            <div class="cot zoom">
-            <a href="https://skyviewweather.netlify.app/" target="_blank">
-              <img src="images/weather.png" class="img-fluid" alt="Tourism website preview">
-              <div class="overlay">
-                <b>Weather Web Application</b><br>
-              </div>
-           </a> 
-           </div>
-          </div>
-        </div>
-        <div class="row mb-5">
-          <div class="col">
-            <div class="cot zoom">
-            <a href="https://github.com/lisatshona/Banking-App" target="_blank">
-              <img src="images/bnk.png" class="img-fluid" alt="Tourism website preview">
-              <div class="overlay">
-                <b>Banking Application </b><br>
-              </div>
-           </a> 
-           </div>
-          </div>
-          <div class="col d-none d-lg-block">
-            <div class="project-description">
-              <h2 class="mb-5">Banking Application</h2>
-              <p class="mb-4 text-muted ">
-                Crafted by a dedicated team using Python and tkiner, 
-                our website is a testament to our shared vision and collective effort.
-                
-              </p>
-              <a href="work.html" class="btn btn-branding-outline">Learn more</a>
-            </div>
-          </div>
-        </div>
-        <div class="row mb-5">
-          <div class="col d-none d-lg-block">
-            <div class="project-description">
-              <h2 class="mb-5">Website Project</h2>
-              <p class="mb-4 text-muted ">
-                Visually captivating tourism website,Crafted by a dedicated team using HTML, CSS, and JavaScript, 
-                our website is a testament to our shared vision and collective effort.
-                With seamless navigation, responsive design, 
-                and interactive elements.
-              </p>
-              <a href="work.html" class="btn btn-branding-outline">Learn more</a>
-            </div>
-          </div>
-          <div class="col">
-            <div class="cot zoom">
-            <a href="https://www.github.com/thandokazi2000" target="_blank">
-              <img src="images/Techno Champ Tours.png" class="img-fluid" alt="Tourism website preview">
-              <div class="overlay">
-                <b>Tourism Website Preview</b><br>
-              </div>
-           </a> 
-           </div>
-          </div>
-        </div>
-        <div class="row mb-5">
-          <div class="col d-none d-lg-block">
-            <div class="project-description">
-              <h2 class="mb-5">Portfolio Project</h2>
-              <p class="mb-4 text-muted ">
-                Portfolio Project, crafted by me using 
-                HTML, CSS, and JavaScript.With seamless navigation, responsive design, 
-                and interactive elements.
-              </p>
-              <a href="work.html" class="btn btn-branding-outline">Learn more</a>
-            </div>
-          </div>
-          <div class="col">
-          <div class="cot zoom">
-            <a href="https://github.com/Thandokazi2000/Portfolio-project" target="_blank" >
-              <img src="images/Portfolio.png" class="img-fluid" alt="Portfolio project preview">
-              <div class="overlay">
-                <b>Portfolio Project</b><br>
-              </div>
-            </a>
-          </div>
-          </div>
-        </div>
+      </a>
+    </div>
 
-        <div class="row mb-5">
-          <div class="col">
-            <div class="cot zoom">
-            <a href="https://www.github.com/thandokazi2000" target="_blank">
-              <img src="images/Screenshot (1).png" class="img-fluid" alt="Decor project preview">
-              <div class="overlay">
-                <b>Decor Website </b><br>
-              </div>
-            </a> 
-            </div>
-          </div>
-          <div class="col d-none d-lg-block">
-            <div class="project-description">
-              <h2 class="mb-5">Decor Website</h2>
-              <p class="mb-4">
-                Decor website,Crafted by a dedicated team using HTML, CSS, and JavaScript, 
-                our website is a testament to our shared vision and collective effort.
-                With seamless navigation, responsive design, 
-                and interactive elements.
-              </p>
-              <a href="work.html" class="btn btn-branding-outline">Learn more</a>
-            </div>
+    <div class="col-md-4">
+      <a href="https://skyviewweather.netlify.app/" target="_blank" class="card-link">
+        <div class="card h-100">
+          <img src="images/weather.png" class="card-img-top" alt="Weather Application">
+          <div class="card-body">
+            <h5 class="card-title">Weather Application</h5>
+            <p class="card-text">Crafted by me using JavaScript and React.</p>
           </div>
         </div>
+      </a>
+    </div>
+
+    <div class="col-md-4">
+      <a href="https://github.com/lisatshona/Banking-App" target="_blank" class="card-link">
+        <div class="card h-100">
+          <img src="images/bnk.png" class="card-img-top" alt="Banking Application">
+          <div class="card-body">
+            <h5 class="card-title">Banking Application</h5>
+            <p class="card-text">Crafted by a dedicated team using Python and tkinter.</p>
+          </div>
+        </div>
+      </a>
+    </div>
+  </div>
+
+  <div class="row mb-5">
+    <div class="col-md-4">
+      <a href="https://agrinnovate.netlify.app/" target="_blank" class="card-link">
+        <div class="card h-100">
+          <img src="images/agrinnovate.png" class="card-img-top" alt="Tourism Website">
+          <div class="card-body">
+            <h5 class="card-title">Tourism Website Preview</h5>
+            <p class="card-text">Visually captivating tourism website, crafted by a dedicated team using HTML, CSS, and JavaScript.</p>
+          </div>
+        </div>
+      </a>
+    </div>
+
+    <div class="col-md-4">
+      <a href="https://thandokazinotyalwa.netlify.app/" target="_blank" class="card-link">
+        <div class="card h-100">
+          <img src="images/portfolio2.png" class="card-img-top" alt="Portfolio Project">
+          <div class="card-body">
+            <h5 class="card-title">Portfolio Project</h5>
+            <p class="card-text">Portfolio Project crafted by me using HTML, CSS, and JavaScript.</p>
+          </div>
+        </div>
+      </a>
+    </div>
+
+    <div class="col-md-4">
+      <a href="https://github.com/S-Makhedama/Catering---services_2" target="_blank" class="card-link">
+        <div class="card h-100">
+          <img src="images/Screenshot (1).png" class="card-img-top" alt="Decor Website">
+          <div class="card-body">
+            <h5 class="card-title">Decor Website</h5>
+            <p class="card-text">Decor website, crafted by a dedicated team using HTML, CSS, and JavaScript.</p>
+          </div>
+        </div>
+      </a>
+    </div>
+  </div>
+</div>
+
+
+
       </div>
     </div>
     <footer>
       <div
         class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex"
       >
-        <div>
-          <h3>Work inquiry</h3>
-          <p class="text-muted">Let's work together</p>
-        </div>
         <footer>
-          <div class="social-links text-center">
+          <!--div class="social-links text-center"
             <a
             href="//www.shecodes.io/certificates/e75cf4dca40ad94fe6fe6750e9a60232"
             target="_blank"
@@ -242,21 +179,13 @@
             target="_blank"
             title="GitHub Profile">
             <i class="fa-brands fa-python"></i></a>
-          </div>
+          </div -->
           </footer>
-        <div>
-          <a
-            href="contact.html"
-            class="btn btn-branding mt-3"
-            title="Contact Thandokazi"
-            >Contact me</a
-          >
-        </div>
       </div>
       
       <div class="social-links text-center">
         <a
-        href="https://www.github.com/thandokazi2000
+        href="https://github.com/thandokazinotyalwa
         "
         target="_blank"
         title="GitHub Profile"
