--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <footer>
         <div class="social-links text-center">
           <a
-          href="https://www.github.com/thandokazi2000
+          href="https://github.com/thandokazinotyalwa
           "
           target="_blank"
           title="GitHub Profile"
