--- a/contact.html
+++ b/contact.html
@@ -84,7 +84,7 @@
            <h3 class="mb-4">GitHub</h3>
            <p class="mb-4">
             <a
-            href="https://www.github.com/thandokazi2000
+            href="https://github.com/thandokazinotyalwa
             "
             target="_blank"
             title="GitHub Profile"
