--- a/index.html
+++ b/index.html
@@ -102,6 +102,199 @@
     </div>
   </div>
 
+  <section class="about-section content-container container">
+    <h2 class="section-heading text-center mb-5">About Me</h2>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="content">
+          <p class="mb-4">
+            I specialize in web development using HTML, CSS, JavaScript,
+            Python, Node.js and React, with proficiency in MySQL, SQL, and
+            MongoDB. Additionally, I have a keen eye for UI/UX design
+            principles, ensuring user-friendly and visually appealing
+            interfaces. Currently, I am gaining valuable experience as a
+            full-stack Developer Candidate at CAPACITI, where I am honing my
+            skills across the entire development stack.
+          </p>
+          <p class="mb-5">
+            Solving complex problems and finding creative solutions are what
+            drive me. I thrive in environments where I can tackle challenges
+            and find innovative ways to overcome them. Collaborating and
+            achieving common goals as a team is what energizes me. I help
+            businesses grow by crafting amazing web experiences. If you are
+            looking for a developer that likes to get stuff done,
+          </p>
+          <a href="work.html" class="btn btn-branding">See my projects</a>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <img
+          src="images/IMG_8272.JPG"
+          alt="My Picture"
+          class="img-fluid rounded"
+        />
+      </div>
+    </div>
+  </section>
+
+
+   <section class="featured-projects-section container mb-5">
+       <h2 class="section-heading text-center mb-5">Featured Projects</h2>
+    <div class="row mb-5">
+      <div class="col-md-4">
+        <a href="https://664b08f656a6517aff08fac7--joyful-trifle-cbba68.netlify.app/" target="_blank" class="card-link">
+          <div class="card h-100">
+            <img src="images/citybiulder.png" class="card-img-top" alt="City Builder">
+            <div class="card-body">
+              <h5 class="card-title">Collaboration Website</h5>
+              <p class="card-text">Crafted by a dedicated team using HTML, CSS, and JavaScript, our website is a testament to our shared vision and collective effort.</p>
+            </div>
+          </div>
+        </a>
+      </div>
+
+      <div class="col-md-4">
+        <a href="https://skyviewweather.netlify.app/" target="_blank" class="card-link">
+          <div class="card h-100">
+            <img src="images/weather.png" class="card-img-top" alt="Weather Application">
+            <div class="card-body">
+              <h5 class="card-title">Weather Application</h5>
+              <p class="card-text">Crafted by me using JavaScript and React.</p>
+            </div>
+          </div>
+        </a>
+      </div>
+
+      <div class="col-md-4">
+        <a href="https://github.com/lisatshona/Banking-App" target="_blank" class="card-link">
+          <div class="card h-100">
+            <img src="images/bnk.png" class="card-img-top" alt="Banking Application">
+            <div class="card-body">
+              <h5 class="card-title">Banking Application</h5>
+              <p class="card-text">Crafted by a dedicated team using Python and tkinter.</p>
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+
+    <div class="row mb-5">
+      <div class="col-md-4">
+        <a href="https://agrinnovate.netlify.app/" target="_blank" class="card-link">
+          <div class="card h-100">
+            <img src="images/agrinnovate.png" class="card-img-top" alt="Tourism Website">
+            <div class="card-body">
+              <h5 class="card-title">Tourism Website Preview</h5>
+              <p class="card-text">Visually captivating tourism website, crafted by a dedicated team using HTML, CSS, and JavaScript.</p>
+            </div>
+          </div>
+        </a>
+      </div>
+
+      <div class="col-md-4">
+        <a href="https://thandokazinotyalwa.netlify.app/" target="_blank" class="card-link">
+          <div class="card h-100">
+            <img src="images/portfolio2.png" class="card-img-top" alt="Portfolio Project">
+            <div class="card-body">
+              <h5 class="card-title">Portfolio Project</h5>
+              <p class="card-text">Portfolio Project crafted by me using HTML, CSS, and JavaScript.</p>
+            </div>
+          </div>
+        </a>
+      </div>
+
+      <div class="col-md-4">
+        <a href="https://github.com/S-Makhedama/Catering---services_2" target="_blank" class="card-link">
+          <div class="card h-100">
+            <img src="images/Screenshot (1).png" class="card-img-top" alt="Decor Website">
+            <div class="card-body">
+              <h5 class="card-title">Decor Website</h5>
+              <p class="card-text">Decor website, crafted by a dedicated team using HTML, CSS, and JavaScript.</p>
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+  </section>
+
+   <!-- Contact section -->
+  <section class="contact-section content-container container">
+    <h2 class="section-heading text-center mb-5">Let's get in touch!</h2>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="social-links">
+          <h3 class="mb-4">Email</h3>
+          <p class="mb-4">
+            <a href="mailto:thandonotyalwa@gmail.com"
+              ><i class="fa-solid fa-envelope"></i></a
+            >
+          </p>
+          <h3 class="mb-4">LinkedIn</h3>
+          <p class="mb-4">
+            <a
+              href="https://www.linkedin.com/feed/"
+              target="_blank"
+              title="LinkedIn Profile"
+              ><i class="fa-brands fa-linkedin"></i
+            ></a>
+          </p>
+          <h3 class="mb-4">GitHub</h3>
+          <p class="mb-4">
+            <a
+              href="https://github.com/thandokazinotyalwa"
+              target="_blank"
+              title="GitHub Profile"
+              ><i class="fa-brands fa-github"></i
+            ></a>
+          </p>
+        </div>
+      </div>
+
+      <div class="col-md-6">
+        <form action="#" id="contact-form">
+          <label for="name">Full Name *</label>
+          <input
+            type="text"
+            placeholder="Enter your name"
+            id="name"
+            name="user_name"
+            oninput="validateName()"
+            required
+          />
+          <br />
+          <label for="email">Email *</label>
+          <input
+            type="email"
+            placeholder="Enter your email"
+            id="email"
+            name="user_email"
+            oninput="validateEmail()"
+            required
+          />
+          <br />
+          <label>Leave a Message *</label>
+          <input
+            type="text"
+            id="message"
+            placeholder="Enter your message"
+            name="user_message"
+            required
+          />
+          <br />
+          <button
+            type="submit"
+            onclick="sendEmail()"
+            value="submit"
+            class="btn btn-branding"
+          >
+            Submit
+          </button>
+        </form>
+      </div>
+    </div>
+  </section>
+
+
 
 
       
