--- a/work.html
+++ b/work.html
@@ -81,7 +81,9 @@
           <img src="images/weather.png" class="card-img-top" alt="Weather Application">
           <div class="card-body">
             <h5 class="card-title">Weather Application</h5>
-            <p class="card-text">Crafted by me using JavaScript and React.</p>
+            <p class="card-text">
+              The Weather application provides real time weather data. Crafted 
+              by me using JavaScript and React.</p>
           </div>
         </div>
       </a>
@@ -106,8 +108,10 @@
         <div class="card h-100">
           <img src="images/agrinnovate.png" class="card-img-top" alt="Tourism Website">
           <div class="card-body">
-            <h5 class="card-title">Tourism Website Preview</h5>
-            <p class="card-text">Visually captivating tourism website, crafted by a dedicated team using HTML, CSS, and JavaScript.</p>
+            <h5 class="card-title">agrinnovate Website Preview</h5>
+            <p class="card-text">
+              Visually captivating agrinnovate website, 
+              crafted by a dedicated team using React, JavaScript and HTML, CSS.</p>
           </div>
         </div>
       </a>
