--- a/about.html
+++ b/about.html
@@ -114,6 +114,7 @@
         <div class="timeline-item">
           <h3>2024</h3>
           <p>Software Development Learnership at CAPACITI</p>
+          <p>City of Cape Town 2024 Innovation Hackathon Winner</p>
         </div>
       </div>
       <div class="col-md-6">
