updated homepage cards

--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
           <div class="card h-100">
             <img src="images/agrinnovate.png" class="card-img-top" alt="Tourism Website">
             <div class="card-body">
-              <h5 class="card-title">Tourism Website Preview</h5>
-              <p class="card-text">Visually captivating tourism website, crafted by a dedicated team using HTML, CSS, and JavaScript.</p>
+              <h5 class="card-title">agrinnovate Website Preview</h5>
+              <p class="card-text">Visually captivating and informative Agriculture website, crafted by a dedicated team using JavaScript, Node.js and React Framework.</p>
             </div>
           </div>
         </a>
