--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
       </div>
 
       <div class="col-md-4">
-        <a href="https://github.com/S-Makhedama/Catering---services_2" target="_blank" class="card-link">
+        <a href="https://ytnwebsite.netlify.app/" target="_blank" class="card-link">
           <div class="card h-100">
             <img src="images/Screenshot (1).png" class="card-img-top" alt="Decor Website">
             <div class="card-body">
