--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
        <h2 class="section-heading text-center mb-5">Featured Projects</h2>
     <div class="row mb-5">
       <div class="col-md-4">
-        <a href="https://664b08f656a6517aff08fac7--joyful-trifle-cbba68.netlify.app/" target="_blank" class="card-link">
+        <a href="https://citi-builder.netlify.app/" target="_blank" class="card-link">
           <div class="card h-100">
             <img src="images/citybiulder.png" class="card-img-top" alt="City Builder">
             <div class="card-body">
